--- a/signin.html
+++ b/signin.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-
+    <form action="" method="post">
+        <legend>Login</legend>
+        <ul>
+          <li><label for="email">Email: </label></li>
+          <li><input type="email" name="email" id="email"></li>
+          <li><label for="password">Password: </label></li>
+          <li><input type="password" name="password" id="password" ></li>
+          <li><button type="submit">Login</button></li>
+      </ul>
+      <p><a href="http://">Forgot password?</a></p>  
+  </form>
 </body>
 </html>
