--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="" method="post">
-        <legend>Sign Up</legend>
+        <h1>Sign Up</h1>
         <ul>
             <li><label for="fname">First Name:</label></li>
             <li><input type="text" name="fname" id="fname"></li>
