some adding the html
adding the html structure if wrong just replace it with better one :v:

--- a/signin.html
+++ b/signin.html
@@ -7,16 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
-        <legend>Login</legend>
-        <ul>
-          <li><label for="email">Email: </label></li>
-          <li><input type="email" name="email" id="email"></li>
-          <li><label for="password">Password: </label></li>
-          <li><input type="password" name="password" id="password" ></li>
-          <li><button type="submit">Login</button></li>
-      </ul>
-      <p><a href="http://">Forgot password?</a></p>  
-  </form>
+    <div class="box-logo">
+        <img src="" alt="">
+    </div>
+
+    <div class="box-image">
+        <img src="" alt="">
+    </div>
+
+    <div class="box-form">
+        <form action="" method="post">
+            <h1>Login</h1>
+            <ul>
+                <li><label for="email">Email: </label></li>
+                <li><input type="email" name="email" id="email"></li>
+                <li><label for="password">Password: </label></li>
+                <li><input type="password" name="password" id="password" ></li>
+                <li><button type="submit">Login</button></li>
+            </ul>
+            <p><a href="http://">Forgot password?</a></p>  
+        </form>
+    </div>
+    
 </body>
 </html>
